--- a/styles/sass/pages/menu.scss
+++ b/styles/sass/pages/menu.scss
@@ -194,7 +194,7 @@
                 & .checked-panel {
                   display: inline-flex;
                   width: 100px;
-                  transform: scaleX(1.2);
+
                   opacity: 1;
                   transition: all 0.3s ease-in-out;
                 }
